Added convenience API methods to retrieve a check outages and events.
